--- a/AboutUs.html
+++ b/AboutUs.html
@@ -164,7 +164,7 @@ make the navigation links stack on top of each other instead of next to each oth
 </div>
 
 <div class="topnav" style="display: flex;flex-flow: row;justify-content: end;">
-      <a href="Home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="AboutUs.html">About Us</a>
       <a href="Destination.html">Destination</a>
       <a href="ContactUs.html">Contact Us</a>
