--- a/ContactUs.html
+++ b/ContactUs.html
@@ -112,7 +112,7 @@ label{
     <p>Yuk cari tahu destinasi wisata yang menunggu untuk kamu kunjungi!</p>
     </div>
 <div class="topnav" style="display: flex;flex-flow: row;justify-content: end;">
-    <a href="Home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="AboutUs.html">About Us</a>
     <a href="Destination.html">Destination</a>
     <a href="ContactUs.html">Contact Us</a>
