--- a/Destination.html
+++ b/Destination.html
@@ -121,7 +121,7 @@ body {
     </div>
 
 <div class="topnav" style="display: flex;flex-flow: row;justify-content: end;">
-      <a href="Home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="AboutUs.html">About Us</a>
       <a href="Destination.html">Destination</a>
       <a href="ContactUs.html">Contact Us</a>
