--- a/Home.html
+++ b/Home.html
@@ -108,7 +108,7 @@
     </div>
 
     <div class="topnav" style="display: flex;flex-flow: row;justify-content: end;">
-      <a href="Home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="AboutUs.html">About Us</a>
       <a href="Destination.html">Destination</a>
       <a href="ContactUs.html">Contact Us</a>
